# imgbased

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  TODO  autogen.sh  configure.ac  images.mk  imgbased.spec  requirements.txt  stdci.yaml
.copr/: Makefile
.github/workflows/: check-patch.yml  ci.yml
automation/: build-artifacts-manual.sh  build-artifacts.packages  build-artifacts.packages.el7  build-artifacts.packages.el8  build-artifacts.packages.fc23  build-artifacts.packages.fc27  build-artifacts.repos.el8  build-artifacts.sh  check-merged.req  check-merged.sh  check-patch.environment.yaml  check-patch.req  check-patch.req.el8  check-patch.req.el9stream  check-patch.sh
ci/: build.sh  install.sh  pre.sh  test.sh
data/: imgbase  imgbase-clean-grub.service  imgbase-config-vdsm.service  imgbase-copy-bootfiles.service  imgbase-firstboot.service  imgbase-fix-new-kernel.service  imgbase-generate-iqn.service  imgbase-motd.service  imgbase-relabel-dev.service  imgbase-setup.service  imgbased-pool.profile
data/hooks/: persistence  rebase
data/images/: Makefile  lmc.makefile  poor-mans-lmc.makefile
data/images/kickstarts/: boot.ks  installation.ks  rootfs.ks  runtime-layout.ks
data/images/kickstarts/baseos/: centos.ks
data/images/kickstarts/partial/: cleanup.ks  firstboot.ks  header.ks  minimization.ks  packages-testing.ks  packages.ks  post.ks  repositories.ks  storage.ks  testing.ks
data/images/kickstarts/platform/: fedora.ks
data/images/kickstarts/template/: boot.ks  installation.ks  rootfs.ks  runtime-layout.ks
data/kickstarts/: Makefile  flatten.py  packages.partial.ks  poor-mans-lmc.makefile  post-installation.template.ks  post.partial.ks  rootfs.template.ks  runtime-layout.template.ks
data/kickstarts/partial/: autologin.ks  firstboot.ks  header.ks  minimization.ks  packages.ks  post-testing.ks  post.ks  storage.ks  testing.ks
data/kickstarts/payload/: cockpit.ks  docker.ks  gluster.ks  ovirt.ks
data/kickstarts/platform/: centos.ks
data/kickstarts/template/: installation.ks  rootfs.ks  runtime-layout.ks
data/ks/: auto-installation-testing.ks.in  flatten.py  rootfs.ks
docs/: imgbase-copy-bootfiles.8  imgbase-fix-new-kernel.8  imgbase.8.asc  imgbase.asc
packaging/rpm/: imgbased-persist.spec  imgbased.spec  imgbased.spec.in
scripts/: imgbase  imgbase-copy-bootfiles  imgbase-fix-new-kernel
scripts/grub/: 09_node
src/: __main__.py  config.py.in  imgbase  imgbase.py
src/imgbased/: __init__.py  __main__.py  bootloader.py  bootsetup.py  command.py  config.py  config.py.in  constants.py  constants.py.in  hooks.py  imgbase.py  layers.py  local.py  lvm.py  naming.py  nsutils.py  openscap.py  timeserver.py  utils.py  volume.py
src/imgbased/plugins/: __init__.py  base.py  boot.py  build.py  core.py  diff.py  firstboot.py  jenkins_update.py  kexec.py  layer.py  layout.py  liveimg.py  openscap.py  osupdater.py  pkg.py  recover.py  remote.py  rpmpersistence.py  service.py  systemd.py  update.py  volume.py
src/plugin-dnf/: imgbased-persist.conf  imgbased-persist.py  imgbased-warning.py
src/plugin-yum/: imgbased-persist.conf  imgbased-persist.py  imgbased-warning.py
tests/: check_packaging.test  check_python.test  fakelvm.py  testBootloader.py  testDiff.py  testSanity.py  testStorage.py  test_bootloader.py  test_sanity.py
tests/functional/: sanity.py  virtexpect.py
tests/package/: README.md  check_packaging.test  check_python.test  common.sh
tests/runtime/: Makefile  README.md  testDiff.py  testSanity.py  testStorage.py  testrunner.py
tools/: anaconda_install  build.mk  image-verrel  image_to_squashfs
